<resources>
    <!-- Skygear informations-->
    <!-- Replace your endpoint and API key in here-->
    <string name="skygear_endPoint">https://androiduserprofile.skygeario.com/</string>
    <string name="skygear_apiKey">f1630f9b483c4ee298d3f2f5a93f10ab</string>

    <string name="app_name">Skygear Profile Demo</string>
    <string name="signing_in">Signing into skygear…</string>
    <string name="signin_btn">SIGNIN</string>
    <string name="signup_btn">SIGNUP</string>
    <string name="password_str">Password</string>
    <string name="username_str">Username</string>
    <string name="edit_profile_text">Edit profile</string>
    <string name="edit_profile_activity">Edit Personal Profile</string>
    <string name="logout_text">Logout</string>
</resources>
