<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.camerash.android_profile_demo.MainActivity">

    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@android:color/white"
            android:layout_gravity="top" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.v4.widget.SwipeRefreshLayout>

    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:visibility="visible">
        <ImageView
            android:layout_width="@dimen/start_page_logo_size"
            android:layout_height="@dimen/start_page_logo_size"
            android:src="@drawable/ic_icon"
            android:layout_gravity="center"
            android:id="@+id/logo2" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:theme="@style/LoginPageEditTextLabel"
            android:textColorHint="@android:color/white">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_str"
                android:id="@+id/username"
                android:textColor="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:textColorLink="@android:color/white"
                android:textColorHint="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:theme="@style/LoginPageEditTextLabel"
            android:textColorHint="@android:color/white">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_str"
                android:id="@+id/password"
                android:textColor="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:textColorLink="@android:color/white"
                android:inputType="textPassword"
                android:textColorHint="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/signin_btn"
                android:layout_width="match_parent"
                android:id="@+id/singin"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"
                android:layout_margin="10dp"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <Button
                android:text="@string/signup_btn"
                android:layout_width="match_parent"
                android:id="@+id/singup"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"
                android:layout_margin="10dp"
                android:layout_height="50dp"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:id="@+id/loading_screen"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/start_page_logo_size"
            android:layout_height="@dimen/start_page_logo_size"
            android:src="@drawable/ic_icon"
            android:layout_gravity="center"
            android:id="@+id/logo" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/white_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:visibility="gone" />

        <TextView
            android:text="@string/signing_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/init_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textStyle="normal|bold"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

    </LinearLayout>

</FrameLayout>
